--- a/style.css
+++ b/style.css
@@ -622,20 +622,19 @@ nav .fa {
 
 /*----titulo numero 2 y articulos---*/
 .titulo2 {
-  width: 80%;
   margin: auto;
   text-align: center;
   padding-top: 100px;
   color: #fff;
 }
 
-h1 {
+.titulo2 h1 {
   font-size: 36px;
   font-weight: 600;
 }
 
-p {
-  color: #000000;
+.titulo2 p {
+  color: #fff;
   font-size: 14px;
   font-weight: 300;
   line-height: 24px;
@@ -658,7 +657,7 @@ p {
   transition: 0.5s;
 }
 
-h3 {
+.titulo2 h3 {
   text-align: center;
   font-weight: 600;
   margin: 10px 0;
