--- a/style.css
+++ b/style.css
@@ -1299,10 +1299,10 @@ td {
 }
 
 /*Celular*/
-@media only screen and (min-width: 480px) and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   /*Header*/
   #personajes-ul {
-    width: 90%;
+    width: 100%;
   }
 
   #personajes-ul li, #menuSelect, #menuSelect option {
