--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ nav .fa {
     padding: 0 12%;
   }
 
-  section {
+  #dragonballintro  {
     padding: 0 12%;
     transition: .2s;
   }
@@ -242,7 +242,7 @@ nav .fa {
     padding: 0 3%;
   }
 
-  section {
+  #dragonballintro  {
     padding: 0 3%;
     transition: .2s;
   }
